# lab-termodinamica-computacional

./: pyproject.toml
meta/: informe.aux  informe.fdb_latexmk  informe.fls  informe.tex  informe.toc
processing/: ciclo.csv  data.csv  processing.ipynb
